--- a/Material/styles.less
+++ b/Material/styles.less
@@ -21,11 +21,13 @@ body {
 	background-color: lighten(@dark-base-color, 7%)
 }
 .card {
-	width: 900px;
+	width: auto;
 	height: auto;
 	padding: 20px;
 	border-radius: 8px;
 	margin: @side-margin auto;
+	margin-left: @side-margin;
+	margin-right: @side-margin;
 	.height-1;
 }
 .card:hover {
