Setup CSS for full-page sections, subheadings, and body texts

--- a/styles.less
+++ b/styles.less
@@ -21,17 +21,39 @@ body {
 }
 
 .title {
-  position: absolute;
-  text-align: center;
-  vertical-align: middle;
   width: 100%;
+  vertical-align: middle;
+  text-align: center;
   color: @prismarine;
 }
 
-.titleText {
+.page {
+  height: 100vh;
+}
+
+.title-text {
   font-size: 100px;
+  font-weight: 400;
+  font-family: 'Roboto Slab', serif;
+}
+
+.section-title-text {
+  font-size: 75px;
   font-weight: 300;
   font-family: 'Roboto Slab', serif;
+  color: @mint;
+
+  margin: 16px;
+}
+
+.section-body-text {
+  font-size: 50px;
+  font-weight: 700;
+  font-family: 'Open Sans', serif;
+  color: @prismarine;
+
+  padding-left: 50%;
+  vertical-align: top;
 }
 
 .scroll-hint {
