--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,33 @@ body {
   background-color: #211311;
 }
 .title {
-  position: absolute;
-  text-align: center;
-  vertical-align: middle;
   width: 100%;
+  vertical-align: middle;
+  text-align: center;
   color: #bffce6;
 }
-.titleText {
+.page {
+  height: 100vh;
+}
+.title-text {
   font-size: 100px;
+  font-weight: 400;
+  font-family: 'Roboto Slab', serif;
+}
+.section-title-text {
+  font-size: 75px;
   font-weight: 300;
   font-family: 'Roboto Slab', serif;
+  color: #90d8a8;
+  margin: 16px;
+}
+.section-body-text {
+  font-size: 50px;
+  font-weight: 700;
+  font-family: 'Open Sans', serif;
+  color: #bffce6;
+  padding-left: 50%;
+  vertical-align: top;
 }
 .scroll-hint {
   font-size: 50px;
